          content available. Corresponds to Content-Range HTTP header.
          Also added a getAvailableSize() to return the range size in
          case it is set, or getSize() otherwise.
        - Added a RangeService class and an Application.rangeService
          property to control to automatic handling of range of 
          response entities.
    - NRE and Extension Enhancements
        - Added a static HttpServletRequest getRequest(Request) method
          to the Servlet extension.
        - DirectoryResource now exposes isDirectoryTarget() and 
          isFileTarget() methods. Suggested by Jean-Yves Cronier.
        - Enhanced WADL extension to support all WADL description 
          properties and both formatting and parsing. Also added new
          WadlRepresentation and WadlResource classes to facilitate the
          description of Resources as WADL documents. 
          Sponsored by NetDev Ltd (http://www.netdev.co.uk).
        - The Apache HTTP Client extension can now have a retry handler
          parameter set. Suggested by Sanjay Acharya.
        - Added a "sslContextFactory" parameter and attribute to HTTPS 
          connectors to improve the flexibility of SSL configuration. If
          this parameter isn't set, the previous parameters are used 
          instead. Contributed by Bruno Harbulot.
        - Exceptions occuring while writing the response entities are 
          now reported as severe errors instead of just info messages.
          Broken connections are still reported as info messages to 
          reduce log size. Contributed by Bruno Dumon.
        - Made the com.noelios.ext.ssl extension public to provide more 
          flexibility in configuring SSL certificates. Depends on 
          jSSLutils library 0.4. Contributed by Bruno Harbulot.
        - Added a port of Restlet to GWT. This is a subset of the 
          Restlet API and Engine, mostly the client side working on top
          of GWT 1.5 RC1.